# dcmax

./: .gitignore  README.md  docker-compose.livekit.yml  package-lock.json  package.json  railway.toml  render.yaml
apps/api/: .env.example  package.json
apps/api/src/: index.ts
apps/native-sender/: .env.example  Cargo.toml  README.md
apps/native-sender/src/: api.rs  capture.rs  config.rs  main.rs  publisher.rs
apps/native-sender/src/platform/: macos.rs  mod.rs  windows.rs  windows_dxgi.rs
apps/web/: .env.example  next.config.mjs  package.json
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/lib/: capabilities.ts  quality.ts
docs/: native-capture-blueprint.md  native-private-beta-milestone.md  production-e2e-qa.md  project-master-documentation.md  public-launch-runbook.md  test-matrix.md
